
Package: PSCBS
==============

Version: 0.37.1 [2013-09-26]
o CLEANUP: Minor adjustments to some of the internal workarounds
  for older versions of 'matrixStats' and 'aroma.light'.
o BUG FIX: Forgot to import several functions from 'matrixStats'.
  These went undetected because 'aroma.light' (< 1.31.6) attached
  the 'matrixStats' in the past.
o BUG FIX: segmentByPairedPSCBS() assumed 'aroma.light' was attached.
o BUG FIX: One of the system tests assumed 'R.utils' was attached.


Version: 0.37.0 [2013-09-21]
o CLEANUP: Package no longer attaches 'R.utils', only imports it.
o BUG FIX/WORKAROUND: For now, package attaches the 'utils' package.
  This is needed due to what appears to be a bug in how 'R.oo'
  finalizes Object:s assuming 'utils' is attached, which may not be
  the case (unless 'R.oo' itself is attached).
o ROBUSTNESS: Now package imports only what is needed from 'DNAcopy'.
o BUG FIX: callGNL() for PairedPSCBS used non-defined 'verbose' object.


Version: 0.36.2 [2013-09-18]
o DOCUMENTATION: Added vignette 'Total copy-number segmentation using CBS'.
o ROBUSTNESS: Now package imports 'matrixStats' (previously suggested).
o ROBUSTNESS: Now package declares S3 methods in the NAMESPACE.
o ROBUSTNESS: Package vignettes no longer assumes that the 'R.rsp'
  package is attached.
o ROBUSTNESS: Forgot to import R.methodsS3::appendVarArgs().
o WORKAROUND: For R (< 3.0.0), hclustCNs() for AbstractCBS would generate
  'Error in rowAlls(ok) : could not find function "loadMethod"'. This
  seems to be a bug in R (< 3.0.0), which we can avoid by attaching the
  'methods' package in hclustCNs().
o Bumped up package dependencies.


Version: 0.36.1 [2013-09-10]
o CLEANUP: Package no longer utilizes ':::'.


Version: 0.36.0 [2013-08-15]
o Made extractMinorMajorCNs() for PairedPSCBS acknowledge additional
  fields related to (C1,C2).


Version: 0.35.6 [2013-08-01]
o Updated the vignettes to utilize the new R.rsp features.


Version: 0.35.5 [2013-07-19]